--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+﻿<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+  <meta charset="UTF-8">
+  <title>Jogo do Passatempo</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
-    <script src="script.js" defer></script>
-    
+  <div class="container">
+    <img src="passatempo.png" alt="Imagem de passatempo">
+  </div>
 </body>
 </html>
