--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Jogo do Passatempo</title>
+  <title>Jogo da Média</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
 </head>
 <body>
   <div class="container">
-    <img src="passatempo.png" alt="Imagem de passatempo">
+    <h1>Bem-vindo ao Jogo da Média</h1>
+    <p>Digite uma quantidade X de números e veja a média calculada</p>
+    <button id="startButton">Iniciar Jogo</button>
   </div>
 </body>
 </html>
- 
